--- a/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                             <a class="nav-link text-dark" asp-controller="Location" asp-action="Index">ლოკაციები</a>
                         </li>
                     }
-                    <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">ჩვენს შესახებ</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="About" asp-action="Index">ჩვენ შესახებ</a>
                     <a class="nav-link text-dark" asp-area="" asp-controller="Contact" asp-action="Index">კონტაქტი</a>
                 </div>
                 <partial name="_LoginPartial" />
