--- a/src/Hackathon_CV_Portal.Web/Views/About/Edit.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/About/Edit.cshtml
@@ -2,7 +2,7 @@
 @model AboutVM
 
 @{
-    ViewData["Title"] = "ჩვენს შესახებ / რედაქტირება";
+    ViewData["Title"] = "ჩვენ შესახებ / რედაქტირება";
 }
 
 <div class="row">
