restyle home page

--- a/src/Hackathon_CV_Portal.Web/Views/Vacancy/AddVacancyDetail.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Vacancy/AddVacancyDetail.cshtml
@@ -103,7 +103,7 @@
                 <div class="d-flex align-items-center justify-content-center ">
                     <div class="text-center">
                         <a asp-controller="Vacancy" asp-action="Detail" asp-route-id="@Model.VacancyId"
-                            class="btn btn-primary">მთავარ მენიუზე დაბრუნება</a>
+                            class="btn btn-primary">დასრულება</a>
                     </div>
                 </div>
             </div>
