--- a/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
+++ b/src/Hackathon_CV_Portal.Web/Views/Home/Index.cshtml
@@ -16,13 +16,21 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-12 wow fadeIn" data-wow-delay="0.5s">
 
-                        <h1 class="mb-4">დასაქმება ასე მარტივი არასდროს ყოფილა</h1>
+                        <h1 style="font-size:52px" class="mb-4">დასაქმება ასე მარტივი არასდროს ყოფილა</h1>
+
+                        <hr />
+
+                        <br />
+                        @if (!User.Identity.IsAuthenticated || User.IsInRole("User"))
+                        {
+                            <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">იპოვე სასურველი ვაკასნია</a>
+                        }
+                        @if (!User.Identity.IsAuthenticated || User.IsInRole("Company"))
+                        {
+                            <a asp-area="" asp-controller="Vacancy" asp-action="Create" class="btn btn-secondary py-md-3 px-md-5 col-6 animated slideInRight">იპოვე სასურველი თანამშრომელი</a>
+                        }
                         <br /><br />
-                        <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">იპოვე სასურველი სამსახური</a>
-                        @*<h2><i class="fa fa-check text-primary me-3"></i>იპოვეთ საურველი სამსახური</h2>*@
-                                <a asp-area="" asp-controller="Vacancy" asp-action="Create" class="btn btn-secondary py-md-9 px-md-5 col-5 animated slideInRight">იპოვე სასურველი თანამშრომელი</a>
-                        @*<h2><i class="fa fa-check text-primary me-3"></i>იპოვეთ სასურველი თანამშრომელი</h4>*@
-                        <br /><br />
+
                         <p><i class="fa fa-check text-primary me-3"></i>სწრაფად</p>
                         <p><i class="fa fa-check text-primary me-3"></i>მარტივად</p>
                         <p><i class="fa fa-check text-primary me-3"></i>ხარისხიანად</p>
@@ -34,21 +42,22 @@
         </div>
     </div>
 
-     <div class="container-xxl row  justify-content-start mt-3">
-        <div class="col-10 col-lg-8 ">
-        <div class="row">
+    @*<div class="container-xxl row  justify-content-start mt-3">
+        <div class="col-10 col-lg-8">
+            <div class="row">
+                @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
+                {
+                    <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">იპოვე სასურველი ვაკასნია</a>
+                    <a asp-area="" asp-controller="Vacancy" asp-action="Index" asp-route-withFiL="@false" asp-route-isFav="@true" class="btn btn-secondary py-md-3 px-md-5 col-5 animated slideInRight">ფავორიტი ვაკანსიები</a>
+                }
 
-       @* <a asp-area="" asp-controller="Vacancy" asp-action="Index" class="btn btn-primary py-md-3 px-md-5 me-3 col-5 animated slideInLeft">იპოვე სასურველი ვაკასნია</a>
-        <a asp-area="" asp-controller="Vacancy" asp-action="Create" class="btn btn-secondary py-md-9 px-md-5 col-5 animated slideInRight">იპოვე სასურველი თანამშრომელი</a>*@
-@*        }
-
-        @if (User.Identity.IsAuthenticated && User.IsInRole("Company"))
-        {*@
-        @*<a asp-controller="Vacancy" asp-action="Index" asp-route-companyId="@int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" class="btn btn-primary py-md-3 px-md-5 col-6 animated slideInRight">თქვენი გამოქვეყნებული ვაკანსიები</a>*@
-         
+                @if (User.Identity.IsAuthenticated && User.IsInRole("Company"))
+                {
+                    <a asp-controller="Vacancy" asp-action="Index" asp-route-companyId="@int.Parse(User.FindFirstValue(ClaimTypes.NameIdentifier))" class="btn btn-primary py-md-3 px-md-5 col-6 animated slideInRight">თქვენი გამოქვეყნებული ვაკანსიები</a>
+                }
+            </div>
         </div>
-        </div>
-        </div>
+    </div>*@
 </div>
 
 
